--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,48 @@
   height: 40vmin;
   pointer-events: none;
 }
+.app-container {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
+.monitoring-wrapper {
+  flex: 1;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  padding-top: 30px;  /* 헤더 바로 아래 패딩(원하는 만큼 조절) */
+  box-sizing: border-box;
+  overflow: auto;
+  background-color: #f5f5f5;
+}
+#wetSection {
+  width: auto;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #ccc;
+}
+
+#drySection {
+  width: auto;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #ccc;
+}
+
+#wetSection svg{
+  background-color: #f5f5f5;
+}
+
+#drySection svg{
+  background-color: #f5f5f5;
+}
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
