--- a/src/App.css
+++ b/src/App.css
@@ -18,11 +18,12 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  padding-top: 30px;  /* 헤더 바로 아래 패딩(원하는 만큼 조절) */
+  padding-top: 20px;  /* 헤더 바로 아래 패딩(원하는 만큼 조절) */
   box-sizing: border-box;
   overflow: auto;
   background-color: #f5f5f5;
 }
+
 #wetSection {
   width: auto;
   height: 100%;
@@ -53,6 +54,21 @@
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
+}
+
+.loader {
+  border: 8px solid #f3f3f3;
+  border-top: 8px solid #3498db;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  animation: spin 1s linear infinite;
+  margin: 100px auto;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
 
 .App-header {
